fix(frontend): remove obsolete browser special handling
Only `-webkit-user-select` is still needed: https://caniuse.com/?search=user-select

Also, always hide the native select box arrow. We show our own blue arrow, and the native one on top of it always looks bad, not only on Firefox. Using only the native one on open boxes on all browsers would be an alternative, but it looks weird if there are multiple select boxes visible, and the selected one changes its arrow style. Ours fits better in to the UI.

--- a/motioneye/static/css/main.css
+++ b/motioneye/static/css/main.css
@@ -209,7 +209,6 @@ img.background-logo {
     top: 10em;
     opacity: 0.03;
     -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
 }
 
@@ -295,7 +294,6 @@ div.settings-section-title {
     background-color: rgba(100, 100, 100, 0.3);
     padding: 5px 0.5em 5px 5px;
     -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
 }
 
@@ -515,18 +513,10 @@ span.minimize {
     position: relative;
     top: -0.1em;
     transition: transform 0.1s linear;
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
 span.minimize.open {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
 }
 
@@ -770,7 +760,6 @@ div.picture-dialog-progress {
     height: 3em;
     border-radius: 0.3em;
     -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
     cursor: pointer;
 }
@@ -888,7 +877,6 @@ div.camera-frame {
     vertical-align: top;
     cursor: pointer;
     -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
     overflow: hidden;
 }
